plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.pragma'
version = '1.3.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	mapstructVersion = '1.6.3'
	springdocVersion = '2.8.17'
	jjwtVersion = '0.12.6'
}

dependencies {

	// WEBFLUX
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// SECURITY
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// VALIDATION
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// MAPSTRUCT
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	// SWAGGER
	implementation("org.springdoc:springdoc-openapi-starter-webflux-ui:${springdocVersion}") {
		exclude group: 'org.apache.commons', module: 'commons-lang3'
	}

	implementation 'org.apache.commons:commons-lang3:3.18.0'

	// JWT
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	// R2DBC
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'

	// MYSQL R2DBC
	implementation 'io.asyncer:r2dbc-mysql:1.1.3'
	

	// LOMBOK
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// TEST
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-parameters']
}

tasks.named('test') {
	useJUnitPlatform()
}

jacoco {
	toolVersion = '0.8.14'
}

def jacocoExclusions = [
		'com/pragma/capacidad_service/CapacidadServiceApplication*',
		'com/pragma/capacidad_service/application/dto/**',
		'com/pragma/capacidad_service/application/mapper/**',
		'com/pragma/capacidad_service/domain/model/**',
		'com/pragma/capacidad_service/domain/port/**',
		'com/pragma/capacidad_service/infrastructure/out/mysql/entity/**',
		'com/pragma/capacidad_service/infrastructure/out/mysql/repository/**',
		'com/pragma/capacidad_service/infrastructure/out/mysql/mapper/**',
		'com/pragma/capacidad_service/infrastructure/out/jwt/mapper/**',
		'com/pragma/capacidad_service/infrastructure/out/jwt/dto/**',
		'com/pragma/capacidad_service/infrastructure/out/webclient/dto/**'
]

tasks.named('jacocoTestReport') {
	dependsOn tasks.test

	reports {
		html.required = true
		xml.required = true
		csv.required = false
	}

	classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it, excludes: jacocoExclusions)
			})
	)
}

tasks.named('jacocoTestCoverageVerification') {
	dependsOn tasks.test

	classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it, excludes: jacocoExclusions)
			})
	)

	violationRules {
		rule {
			element = 'BUNDLE'
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.95
			}
		}
	}
}

tasks.named('check') {
	dependsOn tasks.named('jacocoTestCoverageVerification')
}
